[gd_scene load_steps=3 format=2]

[ext_resource path="res://Player/FoodQueue/FoodQueue.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 10 )

[node name="FoodQueue" type="Node2D"]
script = ExtResource( 1 )

[node name="PickupZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupZone"]
position = Vector2( 0, 10 )
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = 230.0
margin_bottom = -20.0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="PickupZone" to="." method="_on_PickupZone_area_entered"]
[connection signal="area_exited" from="PickupZone" to="." method="_on_PickupZone_area_exited"]
